Add the tests for BusinessService